{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 23,
  "lineage": "0e1ad2be-fd87-761b-bff9-1185f6327819",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Grafana_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cadabe060becb0e1",
            "arn": "arn:aws:ec2:us-east-1:849277819322:instance/i-0f4cb987b51784aa7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4cb987b51784aa7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "posiposi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a590fdccdf76a6f",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-44-203-6-203.compute-1.amazonaws.com",
            "public_ip": "44.203.6.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f6bdcb937371d58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0294fa1d5e38a326f",
            "tags": {
              "Name": "Grafana server"
            },
            "tags_all": {
              "Name": "Grafana server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02484af03dd9d548c"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security_group",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:849277819322:instance/i-0ebd9afac2b34d6c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebd9afac2b34d6c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "posiposi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e33718d23d22f7bc",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-44-204-255-173.compute-1.amazonaws.com",
            "public_ip": "44.204.255.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d78059b33e501aee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0294fa1d5e38a326f",
            "tags": {
              "Name": "Nexus server"
            },
            "tags_all": {
              "Name": "Nexus server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02484af03dd9d548c"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security_group",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Prometheus_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:849277819322:instance/i-0b861fcb5ac752dfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b861fcb5ac752dfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "posiposi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a021b71d5fc98cdd",
            "private_dns": "ip-10-0-2-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.234",
            "public_dns": "ec2-35-174-241-245.compute-1.amazonaws.com",
            "public_ip": "35.174.241.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0742bc8f81fdb8dbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Name": "Prometheus server"
            },
            "tags_all": {
              "Name": "Prometheus server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02484af03dd9d548c"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security_group",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonaQube_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cadabe060becb0e1",
            "arn": "arn:aws:ec2:us-east-1:849277819322:instance/i-036ee202cd44d3ca8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036ee202cd44d3ca8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "posiposi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016fd90e0dff69821",
            "private_dns": "ip-10-0-2-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.239",
            "public_dns": "ec2-44-201-0-179.compute-1.amazonaws.com",
            "public_ip": "44.201.0.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093665913e3b3e9e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Name": "SonaQube server"
            },
            "tags_all": {
              "Name": "SonaQube server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02484af03dd9d548c"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security_group",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:849277819322:instance/i-0ecb4b8a7ec403363",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins_instance_profile",
            "id": "i-0ecb4b8a7ec403363",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "posiposi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8ca82f2e4457e0e",
            "private_dns": "ip-10-0-2-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.119",
            "public_dns": "ec2-3-236-186-179.compute-1.amazonaws.com",
            "public_ip": "3.236.186.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bbe12ebf8adb20b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Application": "jenkins",
              "Name": "jenkins server"
            },
            "tags_all": {
              "Application": "jenkins",
              "Name": "jenkins server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02484af03dd9d548c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_instance_profile",
            "aws_iam_role.jenkins_role",
            "aws_security_group.jenkins_security_group",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:internet-gateway/igw-0107e31ea7f67452f",
            "id": "igw-0107e31ea7f67452f",
            "owner_id": "849277819322",
            "tags": {
              "Name": "minecraft-igw"
            },
            "tags_all": {
              "Name": "minecraft-igw"
            },
            "vpc_id": "vpc-086cb6e79dc1a86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Grafana",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:network-interface/eni-0bd90a30a2b774eb5",
            "id": "eni-0bd90a30a2b774eb5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:16:04:ec:82:0d",
            "owner_id": "849277819322",
            "private_dns_name": "ip-10-0-1-227.ec2.internal",
            "private_ip": "10.0.1.227",
            "private_ip_list": [
              "10.0.1.227"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.227"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a79f35626a121562"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0294fa1d5e38a326f",
            "tags": {
              "Name": "Grafana_network_interface"
            },
            "tags_all": {
              "Name": "Grafana_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Nexus",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:network-interface/eni-0c9785906ccdd1909",
            "id": "eni-0c9785906ccdd1909",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8d:52:23:48:ed",
            "owner_id": "849277819322",
            "private_dns_name": "ip-10-0-1-208.ec2.internal",
            "private_ip": "10.0.1.208",
            "private_ip_list": [
              "10.0.1.208"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.208"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a79f35626a121562"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0294fa1d5e38a326f",
            "tags": {
              "Name": "Nexus_network_interface"
            },
            "tags_all": {
              "Name": "Nexus_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-Prometheus",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:network-interface/eni-0f19cc68dbfb6a19a",
            "id": "eni-0f19cc68dbfb6a19a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:93:93:3e:5e:35",
            "owner_id": "849277819322",
            "private_dns_name": "ip-10-0-2-132.ec2.internal",
            "private_ip": "10.0.2.132",
            "private_ip_list": [
              "10.0.2.132"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.132"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a79f35626a121562"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Name": "Prometheus_network_interface"
            },
            "tags_all": {
              "Name": "Prometheus_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface-SonaQube",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:network-interface/eni-03e9f572b2b39ac82",
            "id": "eni-03e9f572b2b39ac82",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3b:1d:cc:d0:95",
            "owner_id": "849277819322",
            "private_dns_name": "ip-10-0-2-5.ec2.internal",
            "private_ip": "10.0.2.5",
            "private_ip_list": [
              "10.0.2.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a79f35626a121562"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Name": "SonaQube_network_interface"
            },
            "tags_all": {
              "Name": "SonaQube_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main_network_interface_jenkins",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:network-interface/eni-0e6a4df2609fbe2b3",
            "id": "eni-0e6a4df2609fbe2b3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9c:81:76:7d:2b",
            "owner_id": "849277819322",
            "private_dns_name": "ip-10-0-2-102.ec2.internal",
            "private_ip": "10.0.2.102",
            "private_ip_list": [
              "10.0.2.102"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a79f35626a121562"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06859f1ca32336438",
            "tags": {
              "Name": "jenkins_network_interface"
            },
            "tags_all": {
              "Name": "jenkins_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:route-table/rtb-0190a4ece82d4f998",
            "id": "rtb-0190a4ece82d4f998",
            "owner_id": "849277819322",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0107e31ea7f67452f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minecraft-public-route-table"
            },
            "tags_all": {
              "Name": "minecraft-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cb6e79dc1a86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_route_table_association",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0439d239ba4e96c69",
            "route_table_id": "rtb-0190a4ece82d4f998",
            "subnet_id": "subnet-06859f1ca32336438"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0525fef435209ac18",
            "route_table_id": "rtb-0190a4ece82d4f998",
            "subnet_id": "subnet-0294fa1d5e38a326f"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security_group",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:security-group/sg-02484af03dd9d548c",
            "description": "Enable Jenkins/Maven access on port 8080/9100",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02484af03dd9d548c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Maven access",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nexus access",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus access",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "jenkins security group",
            "name_prefix": "",
            "owner_id": "849277819322",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins security group"
            },
            "tags_all": {
              "Name": "jenkins security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cb6e79dc1a86d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:subnet/subnet-0294fa1d5e38a326f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0294fa1d5e38a326f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "849277819322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft-public-subnet-az1"
            },
            "tags_all": {
              "Name": "minecraft-public-subnet-az1"
            },
            "vpc_id": "vpc-086cb6e79dc1a86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:subnet/subnet-06859f1ca32336438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06859f1ca32336438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "849277819322",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft-public-subnet-az2"
            },
            "tags_all": {
              "Name": "minecraft-public-subnet-az2"
            },
            "vpc_id": "vpc-086cb6e79dc1a86d6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:849277819322:vpc/vpc-086cb6e79dc1a86d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d739971965b6e073",
            "default_route_table_id": "rtb-081afaeeda8a9c4b1",
            "default_security_group_id": "sg-0a79f35626a121562",
            "dhcp_options_id": "dopt-0ead10166de2c169d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086cb6e79dc1a86d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081afaeeda8a9c4b1",
            "owner_id": "849277819322",
            "tags": {
              "Name": "minecraft-vpc"
            },
            "tags_all": {
              "Name": "minecraft-vpc"
            }
          }
        }
      ]
    }
  ]
}